frontend/test/should_fail/array_map_exec_input_scalar.grg
rule array_map_exec(ref a:array<double>) {
	modify {
		---
		exec({ aa:array<int> = a.map<int>{value:int -> value} });
	}
}
